# fts_explore

./: .gitignore  .pre-commit-config.yaml  README.md  download_data.sh  download_models.py  merge_data.py  pipeline.sh  pyproject.toml  pyrightconfig.json  setup.sh  test.py  test_1.py  test_2.py  test_3.py  upload_models.py
cli/: download_crypto_data.py  download_models.py  download_weather_data.py  iterative_train.py  train.py  upload_models.py
cli/conf/eval/: default.yaml
cli/conf/finetune/: default.yaml  stage_one.yaml  stage_two.yaml  stage_two_ft.yaml  stage_two_pt.yaml
cli/env_setup/: download_data.sh  download_models.sh  make_env.sh
experiment_results/stage_1_finetune/crypto_data/: evals_ft_vs_pt_mape_Training.csv  evals_ft_vs_pt_mape_Validation.csv
experiment_results/stage_1_finetune/electricity_load_data/: evals_ft_vs_pt_mape_Training.csv  evals_ft_vs_pt_mape_Validation.csv
experiment_results/stage_1_finetune/weather_temperature_data/: evals_ft_vs_pt_mape_Training.csv  evals_ft_vs_pt_mape_Validation.csv
experiment_results/stage_2_finetune/crypto_data/: aggregated_ft.csv  aggregated_pretrained.csv  aggregated_pt.csv  ft_14_30_performance.csv  ft_14_60_performance.csv  ft_21_30_performance.csv  ft_21_60_performance.csv  ft_30_30_performance.csv  ft_30_60_performance.csv  ft_60_60_performance.csv  ft_7_30_performance.csv  ft_7_60_performance.csv  pretrained_14_30_performance.csv  pretrained_14_60_performance.csv  pretrained_21_30_performance.csv  pretrained_21_60_performance.csv  pretrained_30_30_performance.csv  pretrained_30_60_performance.csv  pretrained_60_60_performance.csv  pretrained_7_30_performance.csv  pretrained_7_60_performance.csv  pt_14_30_performance.csv  pt_14_60_performance.csv  pt_21_30_performance.csv  pt_21_60_performance.csv  (+5 more)
notebooks/: aggregation_of_stage_2_data.ipynb  bench_backtesting.ipynb  stage_1_finetuning_eval.ipynb  stage_2_finetune_method_comparison.ipynb  stage_2_finetuning_eval.ipynb
src/fts_explore/: data_module.py
(+57 files in other folders)
